// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@graphql-box/debug-manager >> CacheManager >> CACHE_ENTRY_ADDED >> correct data emitted 1`] = `
[
  {
    "labels": {
      "cacheControl": "public, max-age=5",
      "cacheType": "requestFieldPaths",
      "decryptedCacheKey": "organization({"login":"facebook"})",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "experimentalDeferStreamSupport": false,
      "hasDeferOrStream": false,
      "logGroup": 4,
      "logOrder": 10,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "5256db516a2438a7e5488a00413f4809",
      "requestID": "123456789",
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "mock-userAgent",
      "value": {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook",
      },
    },
    "log": {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_added",
  },
  {
    "labels": {
      "cacheControl": "public, max-age=5",
      "cacheType": "queryResponses",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "experimentalDeferStreamSupport": false,
      "hasDeferOrStream": false,
      "logGroup": 4,
      "logOrder": 10,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "ea1cbc58eca798225b53f59d95ffb23a",
      "requestID": "123456789",
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "mock-userAgent",
      "value": {
        "cacheMetadata": {
          "query": {
            "cacheControl": {
              "maxAge": 5,
              "public": true,
            },
            "etag": undefined,
            "ttl": 297475205000,
          },
          "query.organization": {
            "cacheControl": {
              "maxAge": 5,
              "public": true,
            },
            "etag": undefined,
            "ttl": 297475205000,
          },
        },
        "data": {
          "organization": {
            "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
            "email": "",
            "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
            "login": "facebook",
            "name": "Facebook",
            "url": "https://github.com/facebook",
          },
        },
      },
    },
    "log": {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_added",
  },
  {
    "labels": {
      "cacheControl": "public, max-age=5",
      "cacheType": "dataEntities",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "experimentalDeferStreamSupport": false,
      "hasDeferOrStream": false,
      "logGroup": 4,
      "logOrder": 10,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "requestID": "123456789",
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "mock-userAgent",
      "value": {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook",
      },
    },
    "log": {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_added",
  },
]
`;

exports[`@graphql-box/debug-manager >> CacheManager >> CACHE_ENTRY_QUERIED >> correct data emitted 1`] = `
[
  {
    "labels": {
      "cacheType": "requestFieldPaths",
      "decryptedCacheKey": "organization({"login":"facebook"})",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "experimentalDeferStreamSupport": false,
      "hasDeferOrStream": false,
      "logGroup": 2,
      "logOrder": 4,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "5256db516a2438a7e5488a00413f4809",
      "requestID": "123456789",
      "result": {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
      },
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "mock-userAgent",
    },
    "log": {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_queried",
  },
  {
    "labels": {
      "cacheType": "dataEntities",
      "duration": 0,
      "endTime": 0,
      "environment": "client",
      "experimentalDeferStreamSupport": false,
      "hasDeferOrStream": false,
      "logGroup": 2,
      "logOrder": 4,
      "operation": "query",
      "path": "/",
      "protocol": "http:",
      "queryFiltered": false,
      "requestHash": "Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "requestID": "123456789",
      "result": {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
      },
      "startTime": 0,
      "typeIDKey": "id",
      "url": "http://localhost/",
      "userAgent": "mock-userAgent",
    },
    "log": {
      "level": "INFO",
      "logger": "CLIENT",
    },
    "message": "cache_entry_queried",
  },
]
`;
